# ProdVTON

./: .gitignore  README.md  handoff.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/providers/: base.py  fal_provider.py  makeup_provider.py  model3d_provider.py  runpod_client.py  runpod_provider.py
backend/app/services/: fal_proxy.py  images.py  tryon.py
backend/tests/: conftest.py  test_api.py  test_fal_provider.py  test_fal_proxy.py  test_images.py  test_makeup_provider.py  test_model3d_provider.py  test_runpod_provider.py  test_tryon_service.py
docs/superpowers/plans/: 2026-06-08-prodvton-mvp.md
docs/superpowers/specs/: 2026-06-07-prodvton-mvp-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/ar/: ArStage.tsx  OverlayUploader.tsx  loadImage.ts  useArFace.ts  useOverlayImage.ts
frontend/src/ar3d/: ArStage3D.tsx  JewelleryStage.tsx  glassesModel.ts  ingest3d.ts  useFaceTracker.ts
frontend/src/components/: CameraCapture.tsx  CameraFeed.tsx  GarmentInput.tsx  GenerateButton.tsx  LiveTryOn.tsx  PersonInput.tsx  PersonUploader.tsx  PhotoTryOn.tsx  ResultView.tsx  SessionGallery.tsx
frontend/src/eyewear/: Eyewear3DTryOn.tsx  EyewearTryOn.tsx  eyewearDraw.ts
runpod/catvton-flux/: Dockerfile  README.md  handler.py  requirements.txt
runpod/image-to-3d/: Dockerfile  README.md  handler.py  requirements.txt
runpod/stable-makeup/: Dockerfile  README.md  handler.py  requirements.txt
(+9 files in other folders)
